load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_skylib//lib:dicts.bzl", "dicts")

# See https://github.com/bazelbuild/bazel/issues/7899
load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
load("@bazeldnf//bazeldnf:defs.bzl", "bazeldnf")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@com_github_ash2k_bazel_tools//goimports:def.bzl", "goimports")
load("@io_bazel_rules_docker//contrib:passwd.bzl", "passwd_entry", "passwd_file")

# heads up: docker_push is loaded from contrib:push-all, while container_push is loaded earlier from container:container
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load(
    "@io_bazel_rules_docker//repositories:repositories.bzl",
    container_repositories = "repositories",
)
load("@io_bazel_rules_go//go:def.bzl", "go_library", "nogo")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

py_runtime(
    name = "py2_runtime",
    interpreter_path = "/usr/bin/python2",
    python_version = "PY2",
)

py_runtime(
    name = "py3_runtime",
    interpreter_path = "/usr/bin/python3",
    python_version = "PY3",
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = ":py2_runtime",
    py3_runtime = ":py3_runtime",
)

toolchain(
    name = "py_toolchain",
    toolchain = "py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

goimports(
    name = "goimports",
    display_diffs = True,
    exclude_paths = [
        "./vendor/*",
        "./.history/*",
        "./.git/*",
        "./_ci-configs/*",
    ],
    local = ["kubevirt.io/kubevirt"],
    prefix = "kubevirt.io/kubevirt",
    write = True,
)

nogo(
    name = "nogo_vet",
    config = "nogo_config.json",
    visibility = ["//visibility:public"],
    # These deps enable the analyses equivalent to running `go vet`.
    # Passing vet = True enables only a tiny subset of these (the ones
    # that are always correct).
    # You can see the what `go vet` does by running `go doc cmd/vet`.
    deps = [
        # Nogo dependencies removed due to issue with gazelle recreating the
        # Build.bazel files
        #"//vendor/github.com/nunnatsa/ginkgolinter:go_default_library",
        "//tools/analyzers/banncheck:go_default_library",
        #"//vendor/github.com/gordonklaus/ineffassign/pkg/ineffassign:go_default_library",
        #"//vendor/github.com/kisielk/errcheck/errcheck:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/asmdecl:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/assign:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/atomic:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/bools:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/buildtag:go_default_library",
        # Fails on a vendored dependency, disabling for now.
        # "@org_golang_x_tools//go/analysis/passes/cgocall:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/composite:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/copylock:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/httpresponse:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/loopclosure:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/lostcancel:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/nilfunc:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/printf:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/shift:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/stdmethods:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/structtag:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/tests:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/unreachable:go_default_library",
        # FIXME: Nogo fails analysis although configured to be disabled on nogo_config.json.
        # "@org_golang_x_tools//go/analysis/passes/unsafeptr:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/unusedresult:go_default_library",
    ],
)

# gazelle:prefix kubevirt.io/kubevirt
# gazelle:build_tags selinux
# gazelle:resolve go golang.org/x/tools/go/analysis @org_golang_x_tools//go/analysis:go_default_library
gazelle(
    name = "gazelle",
    build_tags = ["selinux"],
)

bazeldnf(name = "bazeldnf")

alias(
    name = "buildozer",
    actual = "@buildifier_prebuilt//:buildozer",
)

buildifier(
    name = "buildifier",
)

genrule(
    name = "get-version",
    srcs = [],
    outs = [".version"],
    cmd = "grep ^STABLE_BUILD_SCM_REVISION bazel-out/stable-status.txt | cut -d' ' -f2 >$@",
    stamp = 1,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "libvirt-libs",
    srcs = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": ["//rpm:libvirt-libs_aarch64/usr/lib64"],
        "@io_bazel_rules_go//go/platform:linux_s390x": ["//rpm:libvirt-libs_s390x/usr/lib64"],
        "//conditions:default": ["//rpm:libvirt-libs_x86_64/usr/lib64"],
    }),
    hdrs = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": ["//rpm:libvirt-libs_aarch64/usr/include/libvirt"],
        "@io_bazel_rules_go//go/platform:linux_s390x": ["//rpm:libvirt-libs_s390x/usr/include/libvirt"],
        "//conditions:default": ["//rpm:libvirt-libs_x86_64/usr/include/libvirt"],
    }),
    linkstatic = 1,
    strip_include_prefix = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "/rpm/libvirt-libs_aarch64/usr/include/",
        "@io_bazel_rules_go//go/platform:linux_s390x": "/rpm/libvirt-libs_s390x/usr/include/",
        "//conditions:default": "/rpm/libvirt-libs_x86_64/usr/include/",
    }),
    visibility = ["//visibility:public"],
)

passwd_entry(
    name = "nonroot-user",
    gid = 1001,
    home = "/home/nonroot-user",
    shell = "/bin/bash",
    uid = 1001,
    username = "nonroot-user",
)

passwd_file(
    name = "passwd",
    entries = [
        ":nonroot-user",
    ],
)

pkg_tar(
    name = "passwd-tar",
    srcs = [":passwd"],
    mode = "0644",
    package_dir = "etc",
    visibility = ["//visibility:public"],
)

oci_image(
    name = "passwd-image",
    base = select({
        "@io_bazel_rules_go//go/platform:linux_arm64": "@go_image_base_aarch64",
        "@io_bazel_rules_go//go/platform:linux_s390x": "@go_image_base_s390x",
        "//conditions:default": "@go_image_base",
    }),
    tars = [":passwd-tar"],
    user = "1001",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "release",
    values = {"define": "release=true"},
)

# we need to push virt images with the rule from container:container in order to get the digest file
oci_push(
    name = "push-virt-operator",
    image = "//cmd/virt-operator:virt-operator-image",
    repository = "quay.io/kubevirt/virt-operator",
)

oci_push(
    name = "push-virt-api",
    image = "//cmd/virt-api:virt-api-image",
    repository = "quay.io/kubevirt/virt-api",
)

oci_push(
    name = "push-virt-controller",
    image = "//cmd/virt-controller:virt-controller-image",
    repository = "quay.io/kubevirt/virt-controller",
)

oci_push(
    name = "push-virt-handler",
    image = "//cmd/virt-handler:virt-handler-image",
    repository = "quay.io/kubevirt/virt-handler",
)

oci_push(
    name = "push-virt-launcher",
    image = "//cmd/virt-launcher:virt-launcher-image",
    repository = "quay.io/kubevirt/virt-launcher",
)

oci_push(
    name = "push-conformance",
    testonly = True,
    image = "//tests:conformance_image",
    repository = "quay.io/kubevirt/conformance",
)

oci_push(
    name = "push-libguestfs-tools",
    image = "//cmd/libguestfs:libguestfs-tools-image",
    repository = "quay.io/kubevirt/libguestfs-tools",
)

oci_push(
    name = "push-virt-exportserver",
    image = "//cmd/virt-exportserver:virt-exportserver-image",
    repository = "quay.io/kubevirt/virt-exportserver",
)

oci_push(
    name = "push-virt-exportproxy",
    image = "//cmd/virt-exportproxy:virt-exportproxy-image",
    repository = "quay.io/kubevirt/virt-exportproxy",
)

oci_push(
    name = "push-virt-synchronization-controller",
    image = "//cmd/synchronization-controller:synchronization-controller-image",
    repository = "quay.io/kubevirt/virt-synchronization-controller",
)

oci_push(
    name = "push-pr-helper",
    image = "//cmd/pr-helper:pr-helper",
    repository = "quay.io/kubevirt/pr-helper",
)

# The following container_push list is synced with the images in container_bundle "build-other-images".
# cmd images
oci_push(
    name = "push-sidecar-shim",
    image = "//cmd/sidecars:sidecar-shim-image",
    repository = "quay.io/kubevirt/sidecar-shim",
)

oci_push(
    name = "push-network-slirp-binding",
    image = "//cmd/sidecars/network-slirp-binding:network-slirp-binding-image",
    repository = "quay.io/kubevirt/network-slirp-binding",
)

oci_push(
    name = "push-network-passt-binding",
    image = "//cmd/sidecars/network-passt-binding:network-passt-binding-image",
    repository = "quay.io/kubevirt/network-passt-binding",
)

oci_push(
    name = "push-network-passt-binding-cni",
    image = "//cmd/cniplugins/passt-binding/cmd:network-passt-binding-cni-image",
    repository = "quay.io/kubevirt/network-passt-binding-cni",
)

oci_push(
    name = "push-example-hook-sidecar",
    image = "//cmd/sidecars/smbios:example-hook-sidecar-image",
    repository = "quay.io/kubevirt/example-hook-sidecar",
)

oci_push(
    name = "push-example-disk-mutation-hook-sidecar",
    image = "//cmd/sidecars/disk-mutation:example-disk-mutation-hook-sidecar-image",
    repository = "quay.io/kubevirt/example-disk-mutation-hook-sidecar",
)

oci_push(
    name = "push-example-cloudinit-hook-sidecar",
    image = "//cmd/sidecars/cloudinit:example-cloudinit-hook-sidecar-image",
    repository = "quay.io/kubevirt/example-cloudinit-hook-sidecar",
)

# container-disk images
oci_push(
    name = "push-alpine-container-disk-demo",
    image = "//containerimages:alpine-container-disk-image",
    repository = "quay.io/kubevirt/alpine-container-disk-demo",
)

oci_push(
    name = "push-cirros-container-disk-demo",
    image = "//containerimages:cirros-container-disk-image",
    repository = "quay.io/kubevirt/cirros-container-disk-demo",
)

oci_push(
    name = "push-cirros-custom-container-disk-demo",
    image = "//containerimages:cirros-custom-container-disk-image",
    repository = "quay.io/kubevirt/cirros-custom-container-disk-demo",
)

oci_push(
    name = "push-virtio-container-disk",
    image = "//containerimages:virtio-container-disk-image",
    repository = "quay.io/kubevirt/virtio-container-disk",
)

# Kernel boot container
oci_push(
    name = "push-alpine-ext-kernel-boot-demo",
    image = "//containerimages:alpine-ext-kernel-boot-demo-container",
    repository = "quay.io/kubevirt/alpine-ext-kernel-boot-demo",
)

# Customized container-disk images
oci_push(
    name = "push-fedora-with-test-tooling-container-disk",
    image = "//containerimages:fedora-with-test-tooling",
    repository = "quay.io/fedora-with-test-tooling-container-disk",
)

oci_push(
    name = "push-alpine-with-test-tooling-container-disk",
    image = "//containerimages:alpine-with-test-tooling",
    repository = "quay.io/kubevirt/alpine-with-test-tooling-container-disk",
)

oci_push(
    name = "push-fedora-realtime-container-disk",
    image = "//containerimages:fedora-realtime",
    repository = "quay.io/kubevirt/fedora-realtime-container-disk",
)

# testing images
oci_push(
    name = "push-disks-images-provider",
    image = "//images/disks-images-provider:disks-images-provider-image",
    repository = "quay.io/kubevirt/disks-images-provider",
)

oci_push(
    name = "push-vm-killer",
    image = "//images/vm-killer:vm-killer-image",
    repository = "quay.io/kubevirt/vm-killer",
)

oci_push(
    name = "push-winrmcli",
    image = "//images/winrmcli:winrmcli-image",
    repository = "quay.io/kubevirt/winrmcli",
)

genrule(
    name = "build-virtctl",
    srcs = [
        "//cmd/virtctl",
    ],
    outs = ["virtctl-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-virtctl-amd64",
    srcs = [
        "//cmd/virtctl:virtctl-amd64",
    ],
    outs = ["virtctl-copier-amd64"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-virtctl-darwin",
    srcs = [
        "//cmd/virtctl:virtctl-darwin",
    ],
    outs = ["virtctl-copier-darwin"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-virtctl-windows",
    srcs = [
        "//cmd/virtctl:virtctl-windows",
    ],
    outs = ["virtctl-copier-windows"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-virtctl-arm64",
    srcs = [
        "//cmd/virtctl:virtctl-arm64",
    ],
    outs = ["virtctl-copier-arm64"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-virtctl-darwin-arm64",
    srcs = [
        "//cmd/virtctl:virtctl-darwin-arm64",
    ],
    outs = ["virtctl-copier-darwin-arm64"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-virtctl-s390x",
    srcs = [
        "//cmd/virtctl:virtctl-s390x",
    ],
    outs = ["virtctl-copier-s390x"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-ginkgo",
    srcs = [
        "//vendor/github.com/onsi/ginkgo/v2/ginkgo",
    ],
    outs = ["ginkgo-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-manifest-templator",
    srcs = [
        "//tools/manifest-templator:templator",
    ],
    outs = ["manifest-templator-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-perfscale-audit",
    srcs = [
        "//tools/perfscale-audit",
    ],
    outs = ["perfscale-audit-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-perfscale-load-generator",
    srcs = [
        "//tools/perfscale-load-generator",
    ],
    outs = ["perfscale-load-generator-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-cluster-profiler",
    srcs = [
        "//tools/cluster-profiler",
    ],
    outs = ["cluster-profiler-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-junit-merger",
    srcs = [
        "//tools/junit-merger",
    ],
    outs = ["junit-merger-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-functests",
    testonly = True,
    srcs = [
        "//tests:go_default_test",
    ],
    outs = ["functests-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-example-guest-agent",
    testonly = True,
    srcs = [
        "//cmd/example-guest-agent",
    ],
    outs = ["example-guest-agent-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

genrule(
    name = "build-dump",
    srcs = [
        "//cmd/dump",
    ],
    outs = ["dump-copier"],
    cmd = "echo '#!/bin/sh\n\ncp -f $(SRCS) $$1' > \"$@\"",
    executable = 1,
)

filegroup(
    name = "coverage_files",
    srcs = glob(["bazel-out/k8-fastbuild/testlogs/**/coverage.dat"]),
)

genrule(
    name = "goveralls",
    srcs = [
        ":coverage_files",
    ],
    outs = ["bazel-goveralls"],
    cmd = "echo '#!/bin/sh\n\necho $(SRCS) | hack/goveralls.sh'  > \"$@\"",
    executable = 1,
)

genrule(
    name = "coverage-report",
    srcs = [
        ":coverage_files",
    ],
    outs = ["bazel-coverage-report"],
    cmd = "echo '#!/bin/sh\n\necho $(SRCS) | hack/coverage-report.sh'  > \"$@\"",
    executable = 1,
)

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "kubevirt.io/kubevirt",
    visibility = ["//visibility:public"],
)
